--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -4,9 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.Card"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
              x:Name="appointment">
+    <UserControl.Resources>
+        <InputBindingCollection x:Shared="False" x:Key="HRInputBindings">
+            <KeyBinding Key="Space" Command="{Binding ToggleCommand}" />
+            <KeyBinding Key="F2" Command="{Binding Editable.EditCommand}" />
+            <KeyBinding Key="Escape" Command="{Binding Editable.RevertCommand}" />
+            <KeyBinding Key="Delete" Command="{Binding Editable.DeleteCommand}" />
+        </InputBindingCollection>
+    </UserControl.Resources>
 
     <UserControl.InputBindings>
         <KeyBinding Modifiers="Control" Key="N" Command="{Binding AddHealthRecordCommand}" />
@@ -27,10 +36,10 @@
                 </Grid.RowDefinitions>
 
                 <ListView x:Name="records"
-                  ItemsSource="{Binding HealthRecordsView}"
-                  SelectedItem="{Binding SelectedHealthRecord}"
-                  Style="{StaticResource list}"
-                  HorizontalContentAlignment="Stretch" 
+                          ItemsSource="{Binding HealthRecordsView}"
+                          SelectedItem="{Binding SelectedHealthRecord}"
+                          Style="{StaticResource list}"
+                          HorizontalContentAlignment="Stretch"
                           SelectionMode="Single">
                     <ListView.GroupStyle>
                         <GroupStyle>
@@ -40,7 +49,7 @@
                                         <Setter.Value>
                                             <ControlTemplate>
                                                 <StackPanel>
-                                                    <TextBlock Text="{Binding Name, Mode=OneWay}" FontWeight="Bold"></TextBlock>
+                                                    <TextBlock Text="{Binding Name, Mode=OneWay}" FontWeight="Bold" HorizontalAlignment="Right"></TextBlock>
                                                     <Separator />
                                                     <ItemsPresenter />
                                                 </StackPanel>
@@ -61,11 +70,15 @@
                     <ListView.ItemContainerStyle>
                         <Style TargetType="{x:Type ListViewItem}">
                             <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+                            <Setter Property="controls:Attached.InputBindings" Value="{StaticResource HRInputBindings}" />
                         </Style>
                     </ListView.ItemContainerStyle>
                 </ListView>
 
-                <Button Command="{Binding AddHealthRecordCommand}" Grid.Row="1">добавить запись (Ctrl + N)</Button>
+                <Button Command="{Binding AddHealthRecordCommand}"
+                        Height="25"
+                        Margin="0,10,0,0"
+                        Grid.Row="1">добавить запись (Ctrl + N)</Button>
             </Grid>
         </ScrollViewer>
     </Grid>
