--- a/Diagnosis.App/Controls/Directory/TileItem.xaml
+++ b/Diagnosis.App/Controls/Directory/TileItem.xaml
@@ -21,8 +21,8 @@
         <KeyBinding Key="Enter" Command="{Binding Editable.CommitCommand}" />
         <KeyBinding Key="F2" Command="{Binding Editable.EditCommand}" />
         <KeyBinding Key="Escape" Command="{Binding Editable.RevertCommand}" />
-        <KeyBinding Key="Insert" Command="{Binding Search.ToggleSearchCommand}" />
-        <KeyBinding Key="F" Modifiers="Control" Command="{Binding Search.ToggleSearchCommand}" />
+        <KeyBinding Key="Insert" Command="{Binding Search.ToggleSearchActiveCommand}" />
+        <KeyBinding Key="F" Modifiers="Control" Command="{Binding Search.ToggleSearchActiveCommand}" />
 
         <MouseBinding MouseAction="RightClick" Command="{Binding Editable.EditCommand}" />
     </UserControl.InputBindings>
@@ -108,7 +108,7 @@
                         Visibility="{Binding DataContext.Search.IsSearchActive, ElementName=root, Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}"
                         DataContext="{Binding Search}">
                 <controls:FloatSearch.InputBindings>
-                    <KeyBinding Key="Escape" Command="{Binding ToggleSearchCommand}"></KeyBinding>
+                    <KeyBinding Key="Escape" Command="{Binding ToggleSearchActiveCommand}"></KeyBinding>
                     <KeyBinding Key="Enter" Command="{Binding SelectCommand}"></KeyBinding>
                 </controls:FloatSearch.InputBindings>
             </controls:FloatSearch>
@@ -122,7 +122,7 @@
                     e
                 </Button>
                 <Button x:Name="toggleSearch"
-                        Command="{Binding Search.ToggleSearchCommand}"
+                        Command="{Binding Search.ToggleSearchActiveCommand}"
                         Height="20"
 >
                     +
