--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -31,7 +31,7 @@
                               DataContext="{Binding Search}"
                               Grid.Row="1">
             <controls:FloatSearch.InputBindings>
-                <KeyBinding Key="Escape" Command="{Binding ToggleSearchCommand}"></KeyBinding>
+                <KeyBinding Key="Escape" Command="{Binding ToggleSearchActiveCommand}"></KeyBinding>
                 <KeyBinding Key="Enter" Command="{Binding SelectCommand}"></KeyBinding>
             </controls:FloatSearch.InputBindings>
         </controls:FloatSearch>
