--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -14,6 +14,7 @@
             <KeyBinding Key="F2" Command="{Binding Editable.EditCommand}" />
             <KeyBinding Key="Escape" Command="{Binding Editable.RevertCommand}" />
             <KeyBinding Key="Delete" Command="{Binding Editable.DeleteCommand}" />
+            <MouseBinding  MouseAction="LeftDoubleClick" Command="{Binding Editable.EditCommand}" />
         </InputBindingCollection>
     </UserControl.Resources>
 
