--- a/Diagnosis.App/Controls/Forms/HealthRecordEditor.xaml
+++ b/Diagnosis.App/Controls/Forms/HealthRecordEditor.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl xmlns:forms="clr-namespace:Diagnosis.App.Controls.Forms"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              x:Class="Diagnosis.App.Controls.Forms.HealthRecordEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -32,6 +33,10 @@
                                          Day="{Binding FromDay, Mode=TwoWay}" />
             <Label Content="давность" Margin="10,0,0,0" />
             <forms:DateOffsetPicker DateOffset="{Binding DateOffset}" />
+        </DockPanel>
+        <DockPanel>
+            <Label Content="диагноз" />
+            <controls:SearchTree DataContext="{Binding DiagnosisSearch}" />
         </DockPanel>
         <DockPanel>
             <Label Content="число" />
