add search testing screen

--- a/Diagnosis.App/MainWindow.xaml
+++ b/Diagnosis.App/MainWindow.xaml
@@ -24,7 +24,7 @@
 			    Visibility="{Binding DataContext.IsLoginActive, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=root}"
                 Grid.RowSpan="2"
  />
-        
+
         <Grid x:Name="header"
               Visibility="{Binding IsLoginActive, Converter={StaticResource NegBooleanToVisibilityConverter}}">
             <Grid.Background>
@@ -35,6 +35,8 @@
                     <MenuItem Header="Симптомы" Command="{Binding EditSymptomsDirectoryCommand}" />
                     <MenuItem Header="Диагнозы" Command="{Binding EditDiagnosisDirectoryCommand}" />
                 </MenuItem>
+                <CheckBox x:Name="searchesChk"
+				    Content="Поиски" />
             </Menu>
 
             <CheckBox IsChecked="{Binding FastAddingMode}"
@@ -53,26 +55,28 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-
+            </Grid.ColumnDefinitions>            
+            
             <screen:Words x:Name="directory"
-                               DataContext="{Binding WordsManager}"
-                               Visibility="{Binding DataContext.IsWordsEditing, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=root}"
-                               Grid.Column="1"
-                               Margin="10" />
+        		DataContext="{Binding WordsManager}"
+        		Visibility="{Binding DataContext.IsWordsEditing, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=root}"
+        		Grid.Column="1"
+        		Margin="10" />
 
             <screen:Card x:Name="card"
-                         DataContext="{Binding CardVM}"
-                         Visibility="{Binding DataContext.IsWordsEditing, Converter={StaticResource NegBooleanToVisibilityConverter}, ElementName=root}"
-                         Grid.Column="1"
-                         Margin="10" />
+        		DataContext="{Binding CardVM}"
+        		Visibility="{Binding DataContext.IsWordsEditing, Converter={StaticResource NegBooleanToVisibilityConverter}, ElementName=root}"
+        		Grid.Column="1"
+        		Margin="10" />
 
+            <screen:SearchTester x:Name="SearchTester" Grid.Column="1" Visibility="{Binding IsChecked, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=searchesChk}" />
+            
             <Expander IsExpanded="{Binding IsPatientsVisible}"
-                      ExpandDirection="Right"
-			          RenderTransformOrigin="0.5,0.5"
-                      BorderThickness="0,0,1,0"
-                      Padding="1,0,3,0"
-			          HorizontalAlignment="Left">
+        		ExpandDirection="Right"
+        		RenderTransformOrigin="0.5,0.5"
+        		BorderThickness="0,0,1,0"
+        		Padding="1,0,3,0"
+        		HorizontalAlignment="Left">
                 <Expander.BorderBrush>
                     <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveBorderColorKey}}"/>
                 </Expander.BorderBrush>
@@ -85,8 +89,8 @@
                         </TextBlock.LayoutTransform><Run Text="Пациенты" /></TextBlock>
                 </Expander.Header>
                 <screen:Patients x:Name="patients"
-                                 DataContext="{Binding PatientsVM}"
-                                 Margin="10" />
+        			DataContext="{Binding PatientsVM}"
+        			Margin="10" />
             </Expander>
         </Grid>
     </Grid>
