fix move selection when HR deleted

--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -38,6 +38,7 @@
 
                 <ListView x:Name="records"
                           ItemsSource="{Binding HealthRecordsView}"
+                          IsSynchronizedWithCurrentItem="True"
                           SelectedItem="{Binding SelectedHealthRecord}"
                           Style="{StaticResource list}"
                           HorizontalContentAlignment="Stretch"
