--- a/Diagnosis.App/MainWindow.xaml
+++ b/Diagnosis.App/MainWindow.xaml
@@ -12,20 +12,36 @@
         Title="MainWindow" Height="600" Width="800">
     <Window.Resources>
         <vm:MainWindowViewModel x:Key="vm" />
+        <DataTemplate DataType="{x:Type vm:LoginViewModel}">
+            <screen:Login />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:WordsManager}">
+            <screen:Words />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:PatientViewModel}">
+            <screen:Card />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:SearchTester}">
+            <screen:SearchTester />
+        </DataTemplate>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-        <screen:Login x:Name="login"
-			    DataContext="{Binding LoginVM}"
-			    Visibility="{Binding DataContext.IsLoginActive, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=root}"
-                Grid.RowSpan="2"
- />
+        <ContentControl Content="{Binding CurrentScreen}"
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Margin="10" />
 
         <Grid x:Name="header"
+              Grid.ColumnSpan="2"
               Visibility="{Binding IsLoginActive, Converter={StaticResource NegBooleanToVisibilityConverter}}">
             <Grid.Background>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
@@ -35,7 +51,7 @@
                     <MenuItem Header="Симптомы" Command="{Binding EditSymptomsDirectoryCommand}" />
                     <MenuItem Header="Диагнозы" Command="{Binding EditDiagnosisDirectoryCommand}" />
                 </MenuItem>
-                <CheckBox x:Name="searchesChk"
+                <CheckBox x:Name="searchesChk" IsChecked="{Binding SearchTesterState}"
 				    Content="Поиски" />
             </Menu>
 
@@ -48,50 +64,28 @@
                 </MenuItem>
             </Menu>
         </Grid>
-
-        <Grid x:Name="workbench" 
-              Grid.Row="1" 
-              Visibility="{Binding IsLoginActive, Converter={StaticResource NegBooleanToVisibilityConverter}}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>            
-            
-            <screen:Words x:Name="directory"
-        		DataContext="{Binding WordsManager}"
-        		Visibility="{Binding DataContext.IsWordsEditing, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=root}"
-        		Grid.Column="1"
-        		Margin="10" />
-
-            <screen:Card x:Name="card"
-        		DataContext="{Binding CardVM}"
-        		Visibility="{Binding DataContext.IsWordsEditing, Converter={StaticResource NegBooleanToVisibilityConverter}, ElementName=root}"
-        		Grid.Column="1"
-        		Margin="10" />
-
-            <screen:SearchTester x:Name="SearchTester" Grid.Column="1" Visibility="{Binding IsChecked, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=searchesChk}" />
-            
-            <Expander IsExpanded="{Binding IsPatientsVisible}"
+        <Expander IsExpanded="{Binding IsPatientsVisible}"
+                  Visibility="{Binding IsLoginActive, Converter={StaticResource NegBooleanToVisibilityConverter}}"                  
+                  Grid.Row="2"
         		ExpandDirection="Right"
         		RenderTransformOrigin="0.5,0.5"
         		BorderThickness="0,0,1,0"
         		Padding="1,0,3,0"
         		HorizontalAlignment="Left">
-                <Expander.BorderBrush>
-                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveBorderColorKey}}"/>
-                </Expander.BorderBrush>
-                <Expander.Header>
-                    <TextBlock RenderTransformOrigin="0.5,0.5">
-                        <TextBlock.LayoutTransform>
-                            <TransformGroup>
-                                <RotateTransform Angle="-90" />
-                            </TransformGroup>
-                        </TextBlock.LayoutTransform><Run Text="Пациенты" /></TextBlock>
-                </Expander.Header>
-                <screen:Patients x:Name="patients"
-        			DataContext="{Binding PatientsVM}"
+            <Expander.BorderBrush>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveBorderColorKey}}" />
+            </Expander.BorderBrush>
+            <Expander.Header>
+                <TextBlock RenderTransformOrigin="0.5,0.5">
+                    <TextBlock.LayoutTransform>
+                        <TransformGroup>
+                            <RotateTransform Angle="-90" />
+                        </TransformGroup>
+                    </TextBlock.LayoutTransform><Run Text="Пациенты" /></TextBlock>
+            </Expander.Header>
+            <screen:Patients x:Name="patients"
+        			DataContext="{Binding PatientsManager}"
         			Margin="10" />
-            </Expander>
-        </Grid>
+        </Expander>
     </Grid>
 </Window>
