--- a/Diagnosis.App/Controls/Forms/CategoryChooser.xaml
+++ b/Diagnosis.App/Controls/Forms/CategoryChooser.xaml
@@ -1,17 +1,19 @@
-﻿<UserControl xmlns:Controls="clr-namespace:Diagnosis.App.Controls"  
-             x:Class="Diagnosis.App.Controls.Forms.CategoryChooser"
+﻿<UserControl xmlns:Controls="clr-namespace:Diagnosis.App.Controls"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
+             xmlns:local="clr-namespace:Diagnosis.App.Controls.Forms"  
+             x:Class="Diagnosis.App.Controls.Forms.CategoryChooser"
+             mc:Ignorable="d"             
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Controls:RadioListBox ItemsSource="{Binding Categories}"
-                               Focusable="False"
-                               ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                               SelectedItem="{Binding Category}">
-            
+            Focusable="False"
+            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+            SelectedItem="{Binding Category}"
+            MultiSelection="{Binding CategoryMultiSelection, Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:CategoryChooser}}}">
+
             <Controls:RadioListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal" />
