--- a/Diagnosis.App/Controls/RadioListBox.xaml
+++ b/Diagnosis.App/Controls/RadioListBox.xaml
@@ -1,16 +1,24 @@
 ﻿<ListBox x:Class="Diagnosis.App.Controls.RadioListBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:s="clr-namespace:System;assembly=mscorlib">
+    xmlns:s="clr-namespace:System;assembly=mscorlib"
+         Style="{DynamicResource selfStyle}">
 
     <ListBox.Resources>
+        <Style x:Key="selfStyle" TargetType="ListBox">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding MultiSelection, RelativeSource={RelativeSource Self}}" Value="{StaticResource True}">
+                    <Setter Property="SelectionMode" Value="Extended" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
         <Style x:Key="{x:Type ListBoxItem}" TargetType="ListBoxItem">
             <Setter Property="SnapsToDevicePixels" Value="true" />
             <Setter Property="OverridesDefaultStyle" Value="true" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ListBoxItem">
-                        <RadioButton x:Name="radio" 
+                        <RadioButton x:Name="radio"
                                   IsChecked="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}, Path=IsSelected, Mode=TwoWay}">
                             <RadioButton.Content>
                                 <ContentPresenter
@@ -25,6 +33,28 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding MultiSelection, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}}" Value="{StaticResource True}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListBoxItem">
+                                <CheckBox x:Name="radio"
+                                    IsChecked="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}, Path=IsSelected, Mode=TwoWay}">
+                                    <CheckBox.Content>
+                                        <ContentPresenter
+                                            Content="{TemplateBinding ContentControl.Content}"
+                                            ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}"
+                                            ContentStringFormat="{TemplateBinding ContentControl.ContentStringFormat}"
+                                            HorizontalAlignment="{TemplateBinding Control.HorizontalContentAlignment}"
+                                            VerticalAlignment="{TemplateBinding Control.VerticalContentAlignment}"
+                                            SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
+                                    </CheckBox.Content>
+                                </CheckBox>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </DataTrigger>
+            </Style.Triggers>
         </Style>
     </ListBox.Resources>
 
