move selection by up/down keys in SearchTree

--- a/Diagnosis.App/Controls/Forms/HealthRecordEditor.xaml
+++ b/Diagnosis.App/Controls/Forms/HealthRecordEditor.xaml
@@ -36,7 +36,10 @@
         </DockPanel>
         <DockPanel>
             <Label Content="диагноз" />
-            <controls:SearchTree DataContext="{Binding DiagnosisSearch}" />
+            <StackPanel>
+                <TextBlock Text="{Binding Diagnosis}" />
+                <controls:SearchTree DataContext="{Binding DiagnosisSearch}" />
+            </StackPanel>
         </DockPanel>
         <DockPanel>
             <Label Content="число" />
