checkable CategoryViewModel (works only if there is one CategoryChooser on screen)

--- a/Diagnosis.App/Controls/RadioListBox.xaml
+++ b/Diagnosis.App/Controls/RadioListBox.xaml
@@ -12,14 +12,20 @@
                 </DataTrigger>
             </Style.Triggers>
         </Style>
+        
+        <Style x:Key="checkbox" TargetType="CheckBox">
+            <EventSetter Event="Checked" Handler="chkBox_CheckedChanged"/>
+            <EventSetter Event="Unchecked" Handler="chkBox_CheckedChanged"/>
+        </Style>
+        
         <Style x:Key="{x:Type ListBoxItem}" TargetType="ListBoxItem">
             <Setter Property="SnapsToDevicePixels" Value="true" />
             <Setter Property="OverridesDefaultStyle" Value="true" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ListBoxItem">
-                        <RadioButton x:Name="radio"
-                                  IsChecked="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}, Path=IsSelected, Mode=TwoWay}">
+                        <RadioButton x:Name="radio" Focusable="False"
+                                     IsChecked="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}, Path=IsSelected, Mode=TwoWay}">
                             <RadioButton.Content>
                                 <ContentPresenter
                                     Content="{TemplateBinding ContentControl.Content}"
@@ -38,8 +44,9 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="ListBoxItem">
-                                <CheckBox x:Name="radio"
-                                    IsChecked="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}, Path=IsSelected, Mode=TwoWay}">
+                                <CheckBox x:Name="radio" Focusable="False" 
+                                          Style="{StaticResource checkbox}"
+                                    IsChecked="{Binding IsChecked, Mode=TwoWay}">
                                     <CheckBox.Content>
                                         <ContentPresenter
                                             Content="{TemplateBinding ContentControl.Content}"
