--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -81,7 +81,7 @@
                 <Button Command="{Binding AddHealthRecordCommand}"
                         Height="25"
                         Margin="0,10,0,0"
-                        Grid.Row="1">добавить запись (Ctrl + N)</Button>
+                        Grid.Row="1">Добавить запись (Ctrl + N)</Button>
             </Grid>
         </ScrollViewer>
     </Grid>
