--- a/Diagnosis.App/Screens/Search.xaml
+++ b/Diagnosis.App/Screens/Search.xaml
@@ -8,46 +8,102 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel>
-        <сontrols:AutoComplete DataContext="{Binding WordSearch}" />
-        <StackPanel Visibility="{Binding Words.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
-            <TextBlock>Выбранные слова:</TextBlock>
-            <ListView ItemsSource="{Binding Words}">
+             d:DesignHeight="300" d:DesignWidth="500">
+    <UserControl.Resources>
+        <Style TargetType="DockPanel">
+            <Setter Property="Margin">
+                <Setter.Value>
+                    <Thickness Bottom="10"></Thickness>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <StackPanel>
+            <сontrols:AutoComplete DataContext="{Binding WordSearch}" />
+            <DockPanel>
+                <StackPanel DockPanel.Dock="Top"
+                        Visibility="{Binding Words.Count, Converter={StaticResource CountToVisibility}, FallbackValue=Collapsed}">
+                    <TextBlock Margin="0,0,0,2">Слова:</TextBlock>
+                    <ListView ItemsSource="{Binding Words}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <сontrols:TreeItemLight />
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
+                <CheckBox IsChecked="{Binding AnyWord}">Хотя бы одно слово</CheckBox>
+            </DockPanel>
+            <DockPanel>
+                <forms:CategoryChooser CategoryMultiSelection="{StaticResource True}" />
+            </DockPanel>
+            <DockPanel>
+                <TextBlock DockPanel.Dock="Top" Margin="0,0,0,2">Дата приема</TextBlock>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Margin="0,0,5,0">от</TextBlock>
+                    <forms:ComboBoxDatePicker Grid.Column="1" x:Name="firstCol"
+                                          Year="{Binding AppYearLower, Mode=TwoWay}"
+                                          Month="{Binding AppMonthLower, Mode=TwoWay}"
+                                          Day="{Binding AppDayLower, Mode=TwoWay}" />
+                    <TextBlock Grid.Column="2" Margin="10,0,5,0">до</TextBlock>
+                    <forms:ComboBoxDatePicker Grid.Column="3"
+                                          Year="{Binding AppYearUpper, Mode=TwoWay}"
+                                          Month="{Binding AppMonthUpper, Mode=TwoWay}"
+                                          Day="{Binding AppDayUpper, Mode=TwoWay}" />
+                </Grid>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock DockPanel.Dock="Top" Margin="0,0,0,2">Давность</TextBlock>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Margin="0,0,5,0">от</TextBlock>
+                    <forms:DateOffsetPicker Grid.Column="1"
+                                        Width="{Binding ActualWidth, ElementName=firstCol}"
+                                        DateOffset="{Binding HrDateOffsetLower}" />
+                    <TextBlock Grid.Column="2" Margin="10,0,5,0">до</TextBlock>
+                    <forms:DateOffsetPicker  Grid.Column="3" DateOffset="{Binding HrDateOffsetUpper}" />
+                </Grid>
+            </DockPanel>
+
+            <Button Command="{Binding SearchCommand}" Height="33" Margin="0,0,0,10">Искать</Button>            
+        </StackPanel>
+
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+            <ListView ItemsSource="{Binding Results}"
+                      Style="{StaticResource list}"
+                      HorizontalContentAlignment="Stretch"
+                      Visibility="{Binding Results.Count, Converter={StaticResource CountToVisibility}}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <сontrols:TreeItemLight />
+                        <card:HealthRecord />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            
-            <TextBlock>Искать с</TextBlock>
-            <CheckBox IsChecked="{Binding AnyWord}">любым из слов</CheckBox>
-        </StackPanel>
-        <forms:CategoryChooser CategoryMultiSelection="{StaticResource True}" />
-        <DockPanel>
-            <TextBlock DockPanel.Dock="Top">Дата приема в интервале</TextBlock>
-            <forms:ComboBoxDatePicker Year="{Binding AppYearLower, Mode=TwoWay}"
-                                      Month="{Binding AppMonthLower, Mode=TwoWay}"
-                                      Day="{Binding AppDayLower, Mode=TwoWay}" />
-            <TextBlock>—</TextBlock>
-            <forms:ComboBoxDatePicker Year="{Binding AppYearUpper, Mode=TwoWay}"
-                                      Month="{Binding AppMonthUpper, Mode=TwoWay}"
-                                      Day="{Binding AppDayUpper, Mode=TwoWay}" />
-        </DockPanel>
-        <DockPanel>
-            <TextBlock DockPanel.Dock="Top">Давность в интервале</TextBlock>
-            <forms:DateOffsetPicker DateOffset="{Binding HrDateOffsetLower}" />
-            <TextBlock>—</TextBlock>
-            <forms:DateOffsetPicker DateOffset="{Binding HrDateOffsetUpper}" />
-        </DockPanel>
-        <Button Command="{Binding SearchCommand}">Искать</Button>
-        <ListView ItemsSource="{Binding Results}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <card:HealthRecord />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackPanel>
+        </ScrollViewer>
+
+        <TextBlock Grid.Row="1" 
+                   HorizontalAlignment="Center"
+                   Visibility="{Binding NoResultsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+            Не найдено подходящих записей.
+        </TextBlock>
+    </Grid>
 </UserControl>
